--- a/1132940-FinalTerm.html
+++ b/1132940-FinalTerm.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML 圍棋遊戲（雙 Pass 自動終局）</title>
+    <title>1132940-FinalTerm</title>
     <style>
         /* 定義棋盤大小和單元格尺寸 */
         :root {
